removing pmd errors
SVN-Revision: 3305